<resources>
    <string name="app_name">GitHub Manager</string>
    <string name="fab_button_content_desc">Switch Themes</string>
    <string name="search">Search</string>
    <string name="github_manager_title">Github\nMANAGER</string>
    <string name="version_1_0">Version 1.0</string>
    <string name="a_github_manager_system_where_you_can_filter">A github manager system where you can filter projects based on stars, languages and more.</string>
    <string name="join_now_to_manage_github_your_own_way">Join now to manage Github your own way.</string>
    <string name="sign_in_with_github">Sign in with GitHub</string>
    <string name="debojyoti452">\@debojyoti452</string>
    <string name="languages">Languages</string>
    <string name="filter">Filter</string>
    <string name="select_language">Select Language</string>
    <string name="filter_by_language">Filter by Language</string>
    <string name="filter_by_stars">Filter by Stars</string>
    <string name="select_order">Select Order</string>
    <string name="apply">Apply</string>
</resources>
