<?xml version="1.0" encoding="utf-8"?><!--
  ~ /********************************************************************************************
  ~  * Created By Debojyoti Singha
  ~  * Copyright (c) 2022.
  ~  * Licensed under the Apache License, Version 2.0 (the "License");
  ~  * you may not use this file except in compliance with the License.
  ~  * You may obtain a copy of the License at
  ~  * http://www.apache.org/licenses/LICENSE-2.0
  ~  * Unless required by applicable law or agreed to in writing, software
  ~  * distributed under the License is distributed on an "AS IS" BASIS,
  ~  * WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~  * See the License for the specific language governing permissions and
  ~  * limitations under the License.
  ~ ********************************************************************************************/
  -->

<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <RelativeLayout
        android:id="@+id/rrFirstContainer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="100dp"
        android:paddingStart="45dp"
        android:paddingEnd="45dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/logoAuthIV"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_marginEnd="20dp"
            app:srcCompat="@drawable/ic_base_logo"
            tools:ignore="ImageContrastCheck" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/titleLogoTV"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_centerVertical="true"
            android:layout_toEndOf="@+id/logoAuthIV"
            android:text="@string/github_manager_title"
            android:textColor="@color/primaryTextColor"
            android:textSize="30sp"
            android:textStyle="bold" />

        <androidx.appcompat.widget.AppCompatTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/titleLogoTV"
            android:layout_alignParentEnd="true"
            android:layout_marginTop="20dp"
            android:layout_toEndOf="@+id/logoAuthIV"
            android:text="@string/version_1_0"
            android:textColor="#546E7A"
            android:textSize="12sp"
            android:textStyle="bold" />

    </RelativeLayout>

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/contentAuthTV"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="46dp"
        android:layout_marginEnd="46dp"
        android:text="@string/a_github_manager_system_where_you_can_filter"
        android:textColor="@color/secondaryTextColor"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@id/rrFirstContainer"
        app:layout_constraintVertical_bias="0.388"
        tools:ignore="TextContrastCheck" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/appCompatTextView"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="46dp"
        android:layout_marginEnd="46dp"
        android:text="@string/join_now_to_manage_github_your_own_way"
        android:textColor="@color/primaryTextColor"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/contentAuthTV"
        app:layout_constraintVertical_bias="0.03" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/signUpAuthBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="46dp"
        android:layout_marginEnd="46dp"
        android:background="@drawable/drawable_rounded_button"
        android:drawableStart="@drawable/ic_github_logo"
        android:drawablePadding="10dp"
        android:elevation="2dp"
        android:gravity="center"
        android:padding="10dp"
        android:paddingStart="20dp"
        android:paddingEnd="20dp"
        android:text="@string/sign_in_with_github"
        android:textAllCaps="false"
        android:textColor="@color/black"
        android:textSize="14sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/contentAuthTV"
        app:layout_constraintVertical_bias="0.837" />

</androidx.constraintlayout.widget.ConstraintLayout>
